--- a/p8105_hw2_yl4612.md
+++ b/p8105_hw2_yl4612.md
@@ -105,3 +105,47 @@ this dataset:
 
   - The median number of sports balls found in a dumpster in 2017 was 8
   - The total precipitation in 2018 was 70.33 inches.
+
+## Problem 2
+
+Read and clean the NYC Transit dataset.
+
+``` r
+NYC_df = 
+  read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
+  janitor::clean_names() %>% 
+  select(line:vending, -exit_only, ada) %>% 
+  mutate(
+    entry = ifelse(entry %in% c("YES"), TRUE, FALSE)
+    )
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_character(),
+    ##   `Station Latitude` = col_double(),
+    ##   `Station Longitude` = col_double(),
+    ##   Route8 = col_double(),
+    ##   Route9 = col_double(),
+    ##   Route10 = col_double(),
+    ##   Route11 = col_double(),
+    ##   ADA = col_logical(),
+    ##   `Free Crossover` = col_logical(),
+    ##   `Entrance Latitude` = col_double(),
+    ##   `Entrance Longitude` = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+NYC Transit dataset contains information from subway system in NYC. It
+includes information about line, station, route, entrance, entry/exit
+status, vending, staff, and ADA.
+
+So far, I have cleaned the variables’ names by clean\_names, retained
+all varibales I want by select, and converted entry variable from
+character to logical variable by mutate.
+
+The resulting dataset has 1868 rows and 19 columns.
+
+These data have not been tidy yet. For example, route 1 to 11 occupy 11
+columns. If we could arrange them, dataset will be more tidy.
