--- a/p8105_hw2_yl4612.md
+++ b/p8105_hw2_yl4612.md
@@ -149,3 +149,30 @@ The resulting dataset has 1868 rows and 19 columns.
 
 These data have not been tidy yet. For example, route 1 to 11 occupy 11
 columns. If we could arrange them, dataset will be more tidy.
+
+Questions answered using these data;
+
+  - There are 465 distinct stations.
+
+  - There are 84 stations as ADA compliant.
+
+  - 0.3770492 of station entrances/exits without vending allow entrance.
+
+Reformat the NYC Transit dataset
+
+``` r
+re_NYC = NYC_df %>% 
+  mutate_at(vars(route8:route11), as.character) %>% 
+  pivot_longer(
+    route1:route11,
+    names_prefix = "route",
+    names_to = "route_number",
+    values_to = "route_name"
+  )
+```
+
+60 distinct stations serve the A train.
+
+17 Of the stations that serve the A train, stations are ADA compliant.
+
+## Problem 3
