Begin with problem 3

--- a/p8105_hw2_yl4612.md
+++ b/p8105_hw2_yl4612.md
@@ -148,7 +148,7 @@ character to logical variable by mutate.
 The resulting dataset has 1868 rows and 19 columns.
 
 These data have not been tidy yet. For example, route 1 to 11 occupy 11
-columns. If we could arrange them, dataset will be more tidy.
+columns. If we could arrange them, dataset will more likely to be tidy.
 
 Questions answered using these data;
 
@@ -173,6 +173,26 @@ re_NYC = NYC_df %>%
 
 60 distinct stations serve the A train.
 
-17 Of the stations that serve the A train, stations are ADA compliant.
+Of the stations that serve the A train, 17 stations are ADA compliant.
 
 ## Problem 3
+
+Read and clean the pols-month dataset
+
+``` r
+pm_df = 
+  read_csv("./data/pols-month.csv")
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   mon = col_date(format = ""),
+    ##   prez_gop = col_double(),
+    ##   gov_gop = col_double(),
+    ##   sen_gop = col_double(),
+    ##   rep_gop = col_double(),
+    ##   prez_dem = col_double(),
+    ##   gov_dem = col_double(),
+    ##   sen_dem = col_double(),
+    ##   rep_dem = col_double()
+    ## )
