--- a/p8105_hw2_yl4612.Rmd
+++ b/p8105_hw2_yl4612.Rmd
@@ -13,7 +13,7 @@ library(readxl)
 
 Read the Mr. Trashwheel dataset.
 
-```{r}
+```{r r_MT}
 trashwheel_df = 
   read_xlsx(
     "./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
@@ -29,7 +29,7 @@ trashwheel_df =
 
 Read precipitation data! For 2018 and 2017.
 
-```{r}
+```{r r_P2018_2017}
 precip_2018 = 
   read_excel(
     "./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
@@ -55,7 +55,7 @@ precip_2017 =
 
 Now combine annual precipitation. 
 
-```{r}
+```{r c_ap}
 month_df = 
   tibble(
     month = 1:12,
@@ -77,7 +77,7 @@ This dataset contains information from the Mr. Trashwheel trash collector in Bal
 
 Read and clean the NYC Transit dataset.
 
-```{r}
+```{r r_c_NYC}
 NYC_df = 
   read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
   janitor::clean_names() %>% 
@@ -93,7 +93,7 @@ So far, I have cleaned the variables' names by clean_names, retained all varibal
 
 The resulting dataset has `r nrow(NYC_df)` rows and `r ncol(NYC_df)` columns. 
 
-These data have not been tidy yet. For example, route 1 to 11 occupy 11 columns. If we could arrange them, dataset will be more tidy.
+These data have not been tidy yet. For example, route 1 to 11 occupy 11 columns. If we could arrange them, dataset will more likely to be tidy.
 
 Questions answered using these data;
 
@@ -101,11 +101,11 @@ Questions answered using these data;
 
 * There are `r filter(NYC_df, ada == "TRUE") %>% distinct(station_name, line) %>% nrow()` stations as ADA compliant.
 
-* `r nrow(filter(NYC_df, vending == "NO", entry == "TRUE")) / nrow(filter(NYC_df, vending == "NO"))` of station entrances/exits without vending allow entrance.
+* `r filter(NYC_df, vending == "NO", entry == "TRUE") %>% nrow() / filter(NYC_df, vending == "NO") %>% nrow()` of station entrances/exits without vending allow entrance.
 
 Reformat the NYC Transit dataset
 
-```{r}
+```{r r_f_NYC}
 re_NYC = NYC_df %>% 
   mutate_at(vars(route8:route11), as.character) %>% 
   pivot_longer(
@@ -118,8 +118,14 @@ re_NYC = NYC_df %>%
 
 `r filter(re_NYC, route_name == "A") %>% distinct(station_name, line) %>% nrow()` distinct stations serve the A train.
 
-`r filter(re_NYC, route_name == "A", ada == "TRUE") %>% distinct(station_name, line) %>% nrow()` Of the stations that serve the A train, stations are ADA compliant.
+Of the stations that serve the A train, `r filter(re_NYC, route_name == "A", ada == "TRUE") %>% distinct(station_name, line) %>% nrow()` stations are ADA compliant.
 
 ## Problem 3
 
+Read and clean the pols-month dataset
+
+```{r r_c_pm}
+pm_df = 
+  read_csv("./data/pols-month.csv")
+```
 
