complete most part of problem 3

--- a/p8105_hw2_yl4612.md
+++ b/p8105_hw2_yl4612.md
@@ -181,7 +181,32 @@ Read and clean the pols-month dataset
 
 ``` r
 pm_df = 
-  read_csv("./data/pols-month.csv")
+  read_csv("./data/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(
+    mon,
+    into = c("year", "month", "day")
+  ) %>% 
+  mutate(
+    month = recode(
+      month, 
+      "01" = "jan",
+      "02" = "feb",
+      "03" = "mar",
+      "04" = "apr",
+      "05" = "may",
+      "06" = "jun",
+      "07" = "jul",
+      "08" = "aug",
+      "09" = "sep",
+      "10" = "oct",
+      "11" = "nov",
+      "12" = "dec")
+    ) %>% 
+  mutate(
+    president = recode(prez_gop, "0" = "democratic", "1" = "republican", "2" = "republican")
+  ) %>% 
+  select(-prez_gop, -prez_dem, -day)
 ```
 
     ## Parsed with column specification:
@@ -196,3 +221,81 @@ pm_df =
     ##   sen_dem = col_double(),
     ##   rep_dem = col_double()
     ## )
+
+Read and clean the snp dataset
+
+``` r
+snp_df = 
+  read_csv("./data/snp.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(
+    date,
+    into = c("month", "day", "year")
+  ) %>% 
+  mutate(
+    month = recode(
+      month, 
+      "1" = "jan",
+      "2" = "feb",
+      "3" = "mar",
+      "4" = "apr",
+      "5" = "may",
+      "6" = "jun",
+      "7" = "jul",
+      "8" = "aug",
+      "9" = "sep",
+      "10" = "oct",
+      "11" = "nov",
+      "12" = "dec")
+    ) %>% 
+  select(-day) %>% 
+  arrange(year, month) %>% 
+  relocate(year, month)
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   date = col_character(),
+    ##   close = col_double()
+    ## )
+
+Read and clean unemployment dataset
+
+``` r
+unem_df = 
+  read_csv("./data/unemployment.csv") %>% 
+  janitor::clean_names() %>% 
+  pivot_longer(
+    jan:dec,
+    names_to = "month",
+    values_to = "umemployment"
+  ) %>% 
+  mutate(
+    year = as.character(year)
+  )
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   Year = col_double(),
+    ##   Jan = col_double(),
+    ##   Feb = col_double(),
+    ##   Mar = col_double(),
+    ##   Apr = col_double(),
+    ##   May = col_double(),
+    ##   Jun = col_double(),
+    ##   Jul = col_double(),
+    ##   Aug = col_double(),
+    ##   Sep = col_double(),
+    ##   Oct = col_double(),
+    ##   Nov = col_double(),
+    ##   Dec = col_double()
+    ## )
+
+Merge three datasets
+
+``` r
+pols_snp_unem = 
+  left_join(pm_df, snp_df, by = c("year", "month")) %>% 
+  left_join(unem_df, by = c("year", "month"))
+```
