--- a/p8105_hw2_yl4612.Rmd
+++ b/p8105_hw2_yl4612.Rmd
@@ -126,6 +126,86 @@ Read and clean the pols-month dataset
 
 ```{r r_c_pm}
 pm_df = 
-  read_csv("./data/pols-month.csv")
+  read_csv("./data/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(
+    mon,
+    into = c("year", "month", "day")
+  ) %>% 
+  mutate(
+    month = recode(
+      month, 
+      "01" = "jan",
+      "02" = "feb",
+      "03" = "mar",
+      "04" = "apr",
+      "05" = "may",
+      "06" = "jun",
+      "07" = "jul",
+      "08" = "aug",
+      "09" = "sep",
+      "10" = "oct",
+      "11" = "nov",
+      "12" = "dec")
+    ) %>% 
+  mutate(
+    president = recode(prez_gop, "0" = "democratic", "1" = "republican", "2" = "republican")
+  ) %>% 
+  select(-prez_gop, -prez_dem, -day)
+```
+
+Read and clean the snp dataset
+
+```{r r_c_snp}
+snp_df = 
+  read_csv("./data/snp.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(
+    date,
+    into = c("month", "day", "year")
+  ) %>% 
+  mutate(
+    month = recode(
+      month, 
+      "1" = "jan",
+      "2" = "feb",
+      "3" = "mar",
+      "4" = "apr",
+      "5" = "may",
+      "6" = "jun",
+      "7" = "jul",
+      "8" = "aug",
+      "9" = "sep",
+      "10" = "oct",
+      "11" = "nov",
+      "12" = "dec")
+    ) %>% 
+  select(-day) %>% 
+  arrange(year, month) %>% 
+  relocate(year, month)
+```
+
+Read and clean unemployment dataset
+
+```{r r_c_unem}
+unem_df = 
+  read_csv("./data/unemployment.csv") %>% 
+  janitor::clean_names() %>% 
+  pivot_longer(
+    jan:dec,
+    names_to = "month",
+    values_to = "umemployment"
+  ) %>% 
+  mutate(
+    year = as.character(year)
+  )
+```
+
+Merge three datasets
+
+```{r merge}
+pols_snp_unem = 
+  left_join(pm_df, snp_df, by = c("year", "month")) %>% 
+  left_join(unem_df, by = c("year", "month"))
 ```
 
