--- a/p8105_hw2_yl4612.md
+++ b/p8105_hw2_yl4612.md
@@ -299,3 +299,25 @@ pols_snp_unem =
   left_join(pm_df, snp_df, by = c("year", "month")) %>% 
   left_join(unem_df, by = c("year", "month"))
 ```
+
+Pols\_month dataset has 822 rows and 9 columns. The range of years is
+from 2015 to 1947. It contains information about number of national
+politicians who are democratic or republican at any given time. It
+includes key variables named as year, month, gov\_gop, sen\_gop,
+rep\_gop, gov\_dem, sen\_dem, rep\_dem, president.
+
+Snp dataset has 787 rows and 3 columns. The range of years is from 1950
+to 2015. It contains information about Standard & Poor’s stock market
+index, which is often used as a representative measure of stock market
+as a whole. It includes key variables named as year, month, close.
+
+Unemployment dataset has 816 rows and 3 columns. The range of years is
+from 1948 to 2015. It contains information about unemployment rate at
+any given month. It includes key variables named as year, month,
+umemployment.
+
+Resulting dataset has 822 rows and 11 columns. The range of years is
+from 1947 to 2015. It contains information merged from three datasets
+above. It includes key variables named as year, month, gov\_gop,
+sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, president, close,
+umemployment.
